; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_hdac_hdmi.c_hdac_hdmi_port_select_get.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_hdac_hdmi.c_hdac_hdmi_port_select_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdac_device = type { i32 }
%struct.hdac_hdmi_port = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@AC_VERB_GET_DEVICE_SEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hdac_device*, %struct.hdac_hdmi_port*)* @hdac_hdmi_port_select_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hdac_hdmi_port_select_get(%struct.hdac_device* %0, %struct.hdac_hdmi_port* %1) #0 {
  %3 = alloca %struct.hdac_device*, align 8
  %4 = alloca %struct.hdac_hdmi_port*, align 8
  store %struct.hdac_device* %0, %struct.hdac_device** %3, align 8
  store %struct.hdac_hdmi_port* %1, %struct.hdac_hdmi_port** %4, align 8
  %5 = load %struct.hdac_device*, %struct.hdac_device** %3, align 8
  %6 = load %struct.hdac_hdmi_port*, %struct.hdac_hdmi_port** %4, align 8
  %7 = getelementptr inbounds %struct.hdac_hdmi_port, %struct.hdac_hdmi_port* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @AC_VERB_GET_DEVICE_SEL, align 4
  %12 = call i32 @snd_hdac_codec_read(%struct.hdac_device* %5, i32 %10, i32 0, i32 %11, i32 0)
  ret i32 %12
}

declare dso_local i32 @snd_hdac_codec_read(%struct.hdac_device*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
